--- a/TAF-Scripting/pom.xml
+++ b/TAF-Scripting/pom.xml
@@ -119,8 +119,12 @@
 	</build>
 
 	<dependencies>
-
-
+<dependency>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-dependency-plugin</artifactId>
+  <version>3.5.0</version>
+  <type>maven-plugin</type>
+</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
